--- a/index.html
+++ b/index.html
@@ -10,3 +10,16 @@
     <h1>Hello</h1>
 </body>
 </html>
+
+<!-- Заливаем новый проект на Github:
+    1. git init
+    2. git add .
+    3. git commit -m "first commit"
+    4. git remote add origin git@github.com:NelliEfr/example.git (!!! ссылка уникальна для каждого репозитория)
+    5. git push -u origin master    
+
+Заливаем изменение в проект:
+    1. git add .
+    2. git commit -m "commit"
+    3. git push
+ -->
